--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ashley Akamine
-# logo:
+logo: C:\Users\ashle\OneDrive\Documents\GitHub\project_portfolio\assets\akamine.headshot.jpg
 # description: 
 # show_downloads: true
 theme: jekyll-theme-minimal
