--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Ashley Akamine
 # logo:
 # description: Welcome to my coding portfolio!
 show_downloads: false
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minima
