--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Ashley Akamine
+title: Ashley's Coding Portfolio
 # logo:
 # description: Welcome to my coding portfolio!
 show_downloads: false
